k8s/deployment/03-promptads/promptads-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: promptads
  namespace: promptads
  labels:
    app: promptads
    tier: database
spec:
  serviceName: "promptads"
  replicas: 1
  selector:
    matchLabels:
      app: promptads
  template:
    metadata:
      labels:
        app: promptads
        tier: database
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - promptads
              topologyKey: kubernetes.io/hostname
      securityContext:
        fsGroup: 10001  # Permisos de /var/opt/mssql
      containers:
        - name: promptads
          image: mcr.microsoft.com/mssql/server:2022-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
              name: tds
          volumeMounts:
            - name: data
              mountPath: /var/opt/mssql
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "3Gi"
          readinessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: promptads-data
