k8s/deployment/03-promptads/promptads-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promptads
  namespace: promptads
  labels:
    app: promptads
spec:
  type: LoadBalancer
  selector:
    app: promptads
  ports:
    - name: tds
      port: 1434
      targetPort: 1433
